fix: content shift when a dropdown is active

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,10 +5,13 @@
 html, body, #__next {
   padding: 0;
   margin: 0;
-  width: 100%;
   height: 100%;
   font-family: "Montserrat", "sans-serif";
   font-size: 15px;
+}
+
+#__next {
+	width: 100%;
 }
 
 /* html, body, #__next {
